<resources>
    <string name="app_name">Visionboard app</string>
    <string name="add">Lägg till</string>
    <string name="couldnt_find_file">Kunde inte hitta filen!</string>
    <string name="finished">Klar</string>
    <string name="add_sign">+</string>
    <string name="monday">Måndag</string>
    <string name="tuseday">Tisdag</string>
    <string name="thursday">Torsdag</string>
    <string name="wednesday">Onsdag</string>
    <string name="friday">Fredag</string>
    <string name="saturday">Lördag</string>
    <string name="sunday">Söndag</string>
    <string name="create_task">Skapa aktivitet</string>
    <string name="edit_task">Ändra aktivitet</string>
    <string name="cancel">Avbryt</string>
    <string name="create">Skapa</string>
    <string name="task_description">Aktivitets beskrivning</string>
    <string name="task">Aktivitet</string>
    <string name="required">Krävs</string>
    <string name="vision_board">Vision Board</string>
    <string name="tasks">Aktiviteter</string>
    <string name="rewards_and_points"><![CDATA[Belöning & Poäng]]></string>
    <string name="buy">Köp</string>
    <string name="create_reward">Skapa belöning</string>
    <string name="price">Pris</string>
    <string name="reward">Belöning</string>
    <string name="not_enough_points">För lite poäng!</string>
    <string name="points">Poäng:</string>
    <string name="edit">Ändra</string>
    <string name="delete">Ta bort</string>
    <string name="save">spara</string>
    <string name="edit_reward">Ändra belöning</string>
    <string name="overdraft">Övertrassera</string>
    <string name="set_points">Sätt poäng</string>
    <string name="save_to_file">spara till fil</string>
    <string name="load_from_file">ladda från fil</string>
    <string name="recurrent_task">Återkommande</string>
</resources>
